--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.11.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
+    "npm": "^9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
