--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "framer-motion": "^10.12.4",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "npm": "^9.6.4",
