--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.3.1",
     "@prisma/client": "^4.11.0",
     "framer-motion": "^10.12.4",
     "next": "^13.2.4",
